<resources>
    <string name="app_name">Tuner</string>
    <string name="menu_item_coming_soon">Coming Soon</string>
    <string name="menu_item_hot_tracks">Hot Tracks</string>
    <string name="menu_item_new_releases">Releases</string>
    <string name="menu_item_top_albums">Top Albums</string>
    <string name="menu_item_top_songs">Top Songs</string>
    <string name="apple_api_img_description">An image pulled from Apple iTunes API.</string>
</resources>
