<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_coming_soon"
        android:title="@string/menu_item_coming_soon"
        android:icon="@drawable/notifications_white"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
    />
    <item
        android:id="@+id/action_hot_tracks"
        android:title="@string/menu_item_hot_tracks"
        android:icon="@drawable/hot_white"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
    />
    <item
        android:id="@+id/action_new_releases"
        android:title="@string/menu_item_new_releases"
        android:icon="@drawable/album_white"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
    />
    <item
        android:id="@+id/action_top_albums"
        android:title="@string/menu_item_top_albums"
        android:icon="@drawable/star_white"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
    />
    <item
        android:id="@+id/action_top_songs"
        android:title="@string/menu_item_top_songs"
        android:icon="@drawable/musicnote_white"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
    />
</menu>